@@ -2,6 +2,7 @@ version 0.76.01
 	--warnings switch
 	--quality bugfix
 	Limited support added: K-m, K2000
+	Reading/writing AE metering mode field (K-x, K-7, K-5, K-r)
 
 version 0.76.00 ( 2011-07-06 )
 	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
